3era pre entrega - falta

--- a/index.html
+++ b/index.html
@@ -41,21 +41,7 @@
         <main>
             <section class="container-productos">
                 <div id="container-productos-cards" class="container-productos-cards">
-                    <article class="card-producto">
-                        <div class="card-producto-header">
-                            <img class="card-header-img" src="./assets/img/figuraOnePieceLuffy.jpg" alt="luffy">
-                        </div>
-                        <div class="card-producto-body">
-                            <span class="card-body-span-descripcion">FIGURA DABI II </span>
-                            <span class="card-body-span-precio">S/.150.00</span>
-                        </div>
-                        <div class="card-producto-footer">
-                            <button class="card-footer-button">
-                                <i class="bi bi-cart-fill"></i>
-                                COMPRAR AHORA
-                            </button>
-                        </div>
-                    </article> 
+                    
                 </div>
             </section>
         </main>
@@ -84,6 +70,6 @@
     </div>
     
 <script src="assets/js/interfasUsuario.js"></script>
-<script src="assets/js/carrito2.js"></script>
+<script src="assets/js/index.js"></script>
 </body>
 </html>
