--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -39,7 +39,14 @@
         </header>
 
         <main>
-            
+            <section class="container-carrito">
+                <div id="container-carrito-productos">
+
+                </div>
+                <div class="container-carrito-pagar">
+
+                </div>
+            </section>
         </main>
 
         <footer class="containerFooter">
@@ -66,5 +73,6 @@
     </div>
 
 </body>
-<script src="assets/js/interfasUsuario.js"></script>
+<script src="../assets/js/interfasUsuario.js"></script>
+<script src="../assets/js/carrito.js"></script>
 </html>
