--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -38,14 +38,9 @@
         
         </header>
 
-        <main>
-            <section class="container-carrito">
-                <div id="container-carrito-productos">
-
-                </div>
-                <div class="container-carrito-pagar">
-
-                </div>
+        <main class="main-container-carrito">
+            <section id="container-carrito" class="container-carrito">
+               
             </section>
         </main>
 
