--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- ICON -->
     <link rel="icon" href="assets/img/icon.png">
     <!-- FIN ICON -->
+    <!-- TOASTIFY -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <!-- FIN TOASTIFY -->
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- FIN CSS -->
@@ -71,5 +74,6 @@
     
 <script src="assets/js/interfasUsuario.js"></script>
 <script src="assets/js/index.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
