--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -17,6 +17,9 @@
     <!-- ICON -->
     <link rel="icon" href="../assets/img/icon.png">
     <!-- FIN ICON -->
+    <!-- TOASTIFY -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <!-- FIN TOASTIFY -->
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/main.css">
     <!-- FIN CSS -->
@@ -67,4 +70,5 @@
 
 </body>
 <script src="assets/js/interfasUsuario.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </html>
