--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul class="nav-list">
                     <li><a class="nav-active" href="index.html">INICIO</a></li>
                     <li><a href="./pages/carrito.html">CARRITO</a></li>
-                    <li><a href="./pages/inventario.html">INVENTARIO</a></li>
+                    <li><a href="./pages/login.html">LOGIN</a></li>
                 </ul>
             </nav>
         
@@ -73,7 +73,7 @@
     </div>
     
 <script src="assets/js/interfasUsuario.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/xd.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
