--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -32,7 +32,7 @@
                 <ul class="nav-list">
                     <li><a href="./../index.html">INICIO</a></li>
                     <li><a class="nav-active" href="carrito.html">CARRITO</a></li>
-                    <li><a href="inventario.html">INVENTARIO</a></li>
+                    <li><a href="login.html">LOGIN</a></li>
                 </ul>
             </nav>
         
@@ -40,7 +40,6 @@
 
         <main class="main-container-carrito">
             <section id="container-carrito" class="container-carrito">
-               
             </section>
         </main>
 
