--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <ul class="nav-list">
                     <li><a class="nav-active" href="index.html">INICIO</a></li>
                     <li><a href="./pages/carrito.html">CARRITO</a></li>
-                    <li><a href="./pages/login.html">LOGIN</a></li>
+                    <li><a id="login-link" href="./pages/login.html">LOGIN</a></li>
+                    <li><a href="#" id="logout-link" class="nav-item" style="display: none;">CERRAR SESIÓN</a></li>
                 </ul>
             </nav>
         
