--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -32,7 +32,8 @@
                 <ul class="nav-list">
                     <li><a href="./../index.html">INICIO</a></li>
                     <li><a class="nav-active" href="carrito.html">CARRITO</a></li>
-                    <li><a href="login.html">LOGIN</a></li>
+                    <li><a id="login-link" href="./login.html">LOGIN</a></li>
+                    <li><a href="#" id="logout-link" style="display:none;">CERRAR SESIÓN</a></li>
                 </ul>
             </nav>
         
