--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,8 @@
                 <ul class="nav-list">
                     <li><a href="./../index.html">INICIO</a></li>
                     <li><a href="carrito.html">CARRITO</a></li>
-                    <li><a class="nav-active" href="login.html">LOGIN</a></li>
+                    <li><a class="nav-active" id="login-link" href="login.html">LOGIN</a></li>
+                    <li><a href="#" id="logout-link" style="display:none;">CERRAR SESIÓN</a></li>
                 </ul>
             </nav>
         
@@ -115,7 +116,7 @@
                         </div>
                         <div class="row my-5">
                             <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center">
-                                <button id="btn-ingresar" type="button" class="btn btn-logIn btn-dark">Ingresar</button>
+                                <button id="btn-logIn" type="button" class="btn btn-logIn btn-dark">Ingresar</button>
                             </div>
                         </div>
                     </form>
@@ -148,7 +149,7 @@
 
 </body>
 <script src="../assets/js/interfasUsuario.js"></script>
-<script src="../assets/js/index.js"></script>
+<script src="../assets/js/login.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <!-- JS BOOTSTRAP -->  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
