--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- ICON -->
     <link rel="icon" href="assets/img/icon.png">
     <!-- FIN ICON -->
-    <!-- TOASTIFY -->
+    <!-- LIBRERIAS JS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <!-- FIN TOASTIFY -->
+    <!-- FIN LIBRERIAS -->
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- FIN CSS -->
@@ -72,9 +72,12 @@
             </div>
         </footer>
     </div>
-    
+</body>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="assets/js/interfasUsuario.js"></script>
 <script src="assets/js/xd.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </body>
 </html>
