--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -13,10 +13,14 @@
     <!-- FIN SEO -->
     <!-- BOOTSTRAP ICON -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- FIN BOOTSTRAP ICON -->
     <!-- ICON -->
     <link rel="icon" href="../assets/img/icon.png">
     <!-- FIN ICON -->
+    <!-- LIBRERIAS JS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <!-- FIN LIBRERIAS -->
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/main.css">
     <!-- FIN CSS -->
@@ -68,6 +72,8 @@
     </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="sweetalert2.min.js"></script>
 <script src="../assets/js/interfasUsuario.js"></script>
 <script src="../assets/js/carrito.js"></script>
 </html>
