--- a/pages/login.html
+++ b/pages/login.html
@@ -16,9 +16,10 @@
     <!-- ICON -->
     <link rel="icon" href="../assets/img/icon.png">
     <!-- FIN ICON -->
-    <!-- TOASTIFY -->
+    <!-- LIBRERIAS JS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <!-- FIN TOASTIFY -->
+    <link rel="stylesheet" href="sweetalert2.min.css">
+    <!-- FIN LIBRERIAS JS -->
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/main.css">
     <!-- FIN CSS -->
@@ -148,9 +149,11 @@
     </div>
 
 </body>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="sweetalert2.min.js"></script>
 <script src="../assets/js/interfasUsuario.js"></script>
 <script src="../assets/js/login.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <!-- JS BOOTSTRAP -->  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- FIN JS BOOTSTRAP -->
