--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <button id="cerrar" class="cerrar-menu" ><i class="bi bi-x"></i></button>
                 <ul class="nav-list">
                     <li><a class="nav-active" href="index.html">INICIO</a></li>
-                    <li><a href="../pages/carrito.html">CARRITO</a></li>
-                    <li><a id="login-link" href="../pages/login.html">LOGIN</a></li>
+                    <li><a href="./pages/carrito.html">CARRITO</a></li>
+                    <li><a id="login-link" href="./pages/login.html">LOGIN</a></li>
                     <li><a href="#" id="logout-link" class="nav-item" style="display: none;">CERRAR SESIÓN</a></li>
                 </ul>
             </nav>
