--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="assets/js/interfasUsuario.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="./assets/js/interfasUsuario.js"></script>
+<script src="./assets/js/index.js"></script>
 
 </body>
 </html>
