--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -74,6 +74,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="sweetalert2.min.js"></script>
-<script src="../assets/js/interfasUsuario.js"></script>
-<script src="../assets/js/carrito.js"></script>
+<script src="../assets/js/interfasUsuario.js?v=1.0"></script>
+<script src="../assets/js/carrito.js?v=1.0"></script>
 </html>
