--- a/pages/login.html
+++ b/pages/login.html
@@ -152,8 +152,8 @@
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="sweetalert2.min.js"></script>
-<script src="../assets/js/interfasUsuario.js"></script>
-<script src="../assets/js/login.js"></script>
+<script src="../assets/js/interfasUsuario.js?v=1.0"></script>
+<script src="../assets/js/login.js?v=1.0"></script>
 <!-- JS BOOTSTRAP -->  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- FIN JS BOOTSTRAP -->
