--- a/pages/login.html
+++ b/pages/login.html
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <img class="w-25 rounded-circle" src="/assets/img/user.jpg" alt="user">
+                            <img class="w-25 rounded-circle" src="/Proyecto-Javascript/assets/img/user.jpg" alt="user">
                         </div>
                         <div class="row d-flex justify-content-center mb-3">
                             <div class="col-sm-10 col-md-8 col-lg-8 mb-3">
